--- a/skeleton.html
+++ b/skeleton.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/bottom.css">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/skeleton.css" />
+
+    <title>adoptoy</title>
 </head>
+
 <body>
+    <div class="top">
+        <div class="logo"></div>
+    </div>
+
+    <div class="main">
+        <!-- contents here -->
+    </div>
     <div class="bottomnavbar">
-        <a href="#" class="bottomicons"><span>Home</span></a>
-        <a href="#" class="bottomicons"><span>Likes</span></a>
-        <a href="#" class="bottomicons"><span>Chat</span></a>
-        <a href="#" class="bottomicons"><span>Profile</span></a>
-        </div>;
+        <a href="#" class="bottomicons">
+            <span class="material-icons"> home </span>
+            <span class="bottomtitle">Home</span>
+        </a>
+        <a href="#" class="bottomicons">
+            <span class="material-icons"> favorite </span>
+            <span class="bottomtitle">Likes</span>
+        </a>
+        <a href="#" class="bottomicons">
+            <span class="material-icons"> chat </span>
+            <span class="bottomtitle">Chat</span>
+        </a>
+        <a href="#" class="bottomicons">
+            <span class="material-icons"> account_circle </span>
+            <span class="bottomtitle">Profile</span>
+        </a>
+    </div>
 </body>
+
 </html>
