--- a/profile.html
+++ b/profile.html
@@ -22,6 +22,7 @@
 
     <div class="main">
         <!-- contents here -->
+        <p>profile</p>
     </div>
     <div class="bottomnavbar">
         <a href="/home.html" class="bottomicons">
