--- a/chat.html
+++ b/chat.html
@@ -22,6 +22,7 @@
 
     <div class="main">
         <!-- contents here -->
+        <p>chat</p>
     </div>
     <div class="bottomnavbar">
         <a href="/home.html" class="bottomicons">
