--- a/post.html
+++ b/post.html
@@ -32,7 +32,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/skeleton.css" />
     <link rel="stylesheet" href="./styles/post.css">
 
@@ -84,7 +83,7 @@
             <!-- <input type="text" name="hashtag" id="hashtag" class="hashtags" placeholder="#tag"> -->
         </div>
         <div class="submitbutton">
-            <button id="postsubmit" type="submit">Submit</button>
+            <button id="postsubmit" type="submit" onclick="submit()">Submit</button>
         </div>
 
 
