style: add custom color

--- a/profile.html
+++ b/profile.html
@@ -112,8 +112,8 @@
                             <input type="text" class="form-control" id="modal-post-code" />
                         </div>
                         <div class="modal-footer d-block">
-                            <button type="button" class="btn btn-primary float-end" id="save-btn">save</button>
-                            <button type="submit" class="btn btn-secondary float-end"
+                            <button type="button" class="btn btn-kellyblue float-end" id="save-btn">save</button>
+                            <button type="submit" class="btn btn-kellyred float-end"
                                 data-bs-dismiss="modal">close</button>
                         </div>
                     </form>
