feat: link logo to home.html

--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
 
 <body>
     <div class="top">
-        <div class="logo"></div>
+        <a href="home.html"><div class="logo"></div></a>
         <a href="/index.html" class="logout">
             <button type="button" class="btn btn-dark btn-sm" id="logout-btn">Log-out</button>
         </a>
