--- a/detail.html
+++ b/detail.html
@@ -32,6 +32,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <!-- stylesheet -->
+    <link rel="stylesheet" href="./styles/detail.css" />
     <link rel="stylesheet" href="./styles/skeleton.css" />
 
 
@@ -43,8 +44,23 @@
     </div>
 
     <div class="main">
-        <!-- contents here -->
+        <div class="item-image">image</div>
+        <div class="user-container">
+            <div class="user-photo"></div>
+            <div class="user-id">user-id</div>
+            <div class="user-kandy">🍬 Kandy <span class="user-kandy-count">1</span></div>
+        </div>  
+        <div class="detail-container">
+            <div class="subject">subject</div>
+            <div class="time">time</div>
+            <div class="details">
+                <div class="material-icons md-18 type">label<span class="item-type"> new</span></div>
+                <div class="material-icons md-18 age">face<span class="age-range"> 3-5</span> </div>
+                <div class="description">description</div>
+            </div>
+        </div>
     </div>
+
     <div class="bottomnavbar">
         <a href="/home.html" class="bottomicons">
             <span class="material-icons"> home </span>
@@ -63,6 +79,9 @@
             <span class="bottomtitle">Profile</span>
         </a>
     </div>
+
+    <!-- script files -->
+    <script src="/scripts/detail.js"></script>
 </body>
 
 </html>
