feat: implement detail page

--- a/detail.html
+++ b/detail.html
@@ -40,7 +40,9 @@
 
 <body>
     <div class="top">
-        <a href="home.html"><div class="logo"></div></a>
+        <a href="home.html">
+            <div class="logo"></div>
+        </a>
     </div>
 
     <div class="main">
@@ -49,9 +51,12 @@
             <div class="user-photo"></div>
             <div class="user-id">user-id</div>
             <div class="user-kandy">🍬 Kandy <span class="user-kandy-count">1</span></div>
-        </div>  
+        </div>
         <div class="detail-container">
             <div class="subject">subject</div>
+            <div class="like-btn"><span class="material-icons" id="like-icon">
+                    toys
+                </span></div>
             <div class="time">time</div>
             <div class="details">
                 <div class="material-icons md-18 type">label<span class="item-type"> new</span></div>
