--- a/home.html
+++ b/home.html
@@ -33,6 +33,7 @@
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/skeleton.css" />
+    <link rel="stylesheet" href="./styles/myListings.css">
 
 
 </head>
@@ -66,6 +67,8 @@
             <span class="bottomtitle">Profile</span>
         </a>
     </div>
+
+    <script src="./scripts/home.js"></script>
 </body>
 
 </html>
