Like toggle added

--- a/detail.html
+++ b/detail.html
@@ -54,9 +54,9 @@
         </div>
         <div class="detail-container">
             <div class="subject">subject</div>
-            <div class="like-btn"><span class="material-icons" id="like-icon">
+            <button class="like-btn" type="button"><span class="material-icons" id="like-icon" style="color: black">
                     toys
-                </span></div>
+                </span></button>
             <div class="time">time</div>
             <div class="details">
                 <div class="material-icons md-18 type">label<span class="item-type"> new</span></div>
