--- a/detail.html
+++ b/detail.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="main">
-        <div class="item-image">image</div>
+        <div class="item-image"></div>
         <div class="user-container">
             <div class="user-photo"></div>
             <div class="user-id">user-id</div>
