--- a/detail.html
+++ b/detail.html
@@ -54,7 +54,7 @@
         </div>
         <div class="detail-container">
             <div class="subject">subject</div>
-            <button class="like-btn" type="button"><span class="material-icons" id="like-icon" style="color: black">
+            <button class="like-btn" type="button"><span class="material-icons" id="like-icon" style="color: #31393c">
                     toys
                 </span></button>
             <div class="time">time</div>
