--- a/post.html
+++ b/post.html
@@ -62,11 +62,11 @@
         </div>
         <div class="ageOption">
             <select id="ageRange" name="ageRange">
-                <option value="under12">0 - 12 month</option>
-                <option value="under24">12 - 24 month</option>
-                <option value="under36">24 - 36 month</option>
-                <option value="under48">36 - 48 month</option>
-                <option value="over48">48 month +</option>
+                <option value="0 - 12 month">0 - 12 month</option>
+                <option value="12 - 24 month">12 - 24 month</option>
+                <option value="24 - 36 month">24 - 36 month</option>
+                <option value="36 - 48 month">36 - 48 month</option>
+                <option value="48 month +">48 month +</option>
             </select>
         </div>
         <div class="usedOption">
