feat: add like functions

--- a/detail.html
+++ b/detail.html
@@ -50,7 +50,7 @@
         <div class="user-container">
             <div class="user-photo"></div>
             <div class="user-id">user-id</div>
-            <div class="user-kandy">🍬 Kandy <span class="user-kandy-count">1</span></div>
+            <div class="user-kandy">🍬 Kandy <span class="user-kandy-count"></span></div>
         </div>
         <div class="detail-container">
             <div class="subject">subject</div>
@@ -59,9 +59,9 @@
                 </span></button>
             <div class="time">time</div>
             <div class="details">
-                <div class="material-icons md-18 type">label<span class="item-type"> new</span></div>
-                <div class="material-icons md-18 age">face<span class="age-range"> 3-5</span> </div>
-                <div class="description">description</div>
+                <div class="material-icons md-18 type">label<span class="item-type"></span></div>
+                <div class="material-icons md-18 age">face<span class="age-range"></span> </div>
+                <div class="description"></div>
             </div>
         </div>
     </div>
