Color changed for bottom nav bar

--- a/home.html
+++ b/home.html
@@ -35,6 +35,11 @@
     <link rel="stylesheet" href="./styles/skeleton.css" />
     <link rel="stylesheet" href="./styles/myListings.css">
 
+    <style>
+        .bottomicons:first-child{
+            background-color:#ca774d;
+        }
+    </style>
 
 </head>
 
