--- a/profile.html
+++ b/profile.html
@@ -34,6 +34,11 @@
     <link rel="stylesheet" href="./styles/skeleton.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
 
+    <style>
+        .bottomicons:nth-child(4){
+            background-color:#ca774d;
+        }
+    </style>
 </head>
 
 <body>
