--- a/likes.html
+++ b/likes.html
@@ -35,6 +35,11 @@
     <link rel="stylesheet" href="./styles/skeleton.css" />
     <link rel="stylesheet" href="./styles/myListings.css" />
 
+    <style>
+        .bottomicons:nth-child(2){
+            background-color:#ca774d;
+        }
+    </style>
 
 </head>
 
